// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/git-submodules/artifact updateArtifacts() returns empty content 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "",
      "name": "",
    },
  },
]
`;

exports[`manager/git-submodules/artifact updateArtifacts() returns two modules 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "",
      "name": "renovate",
    },
  },
  Object {
    "file": Object {
      "contents": "",
      "name": "renovate-pro",
    },
  },
]
`;
